--- a/UserService/UserService.csproj
+++ b/UserService/UserService.csproj
@@ -18,4 +18,8 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\UserServiceBusiness\UserServiceBusiness.csproj" />
+    </ItemGroup>
+
 </Project>
