--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -11,6 +11,14 @@ on:
 jobs:
   Build:
     runs-on: ubuntu-latest
+    
+    services:
+      postgres:
+        image: postgres:13
+        env:
+          POSTGRES_PASSWORD: ${{ secrets.DB_PASSWORD }}
+        ports:
+          - 5432:5432
 
     steps:
     - uses: actions/checkout@v4
@@ -27,4 +35,6 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
     - name: Run tests
+      env:
+        ConnectionStrings__DefaultConnection: ${{ secrets.CONNECTION_STRING }}
       run: dotnet test ./UserIntegrationTests/UserIntegrationTests.csproj
