--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -17,6 +17,8 @@ jobs:
         image: postgres:13
         env:
           POSTGRES_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          POSTGRES_USER: ${{ secrets.DB_USER }}
+          POSTGRES_DB: ${{ secrets.DB_NAME }}
         ports:
           - 5432:5432
 
@@ -36,5 +38,5 @@ jobs:
       run: dotnet build --no-restore
     - name: Run tests
       env:
-        ConnectionStrings__DefaultConnection: ${{ secrets.CONNECTION_STRING }}
+        ConnectionStrings__DefaultConnection: "Host=localhost;Port=5432;Database=${{ secrets.DB_NAME }};Username=${{ secrets.DB_USER }};Password=${{ secrets.DB_PASSWORD }}"
       run: dotnet test ./UserIntegrationTests/UserIntegrationTests.csproj
