quick cors test for kubernetes

--- a/.github/workflows/dockerize.yml
+++ b/.github/workflows/dockerize.yml
@@ -25,4 +25,4 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true
-          tags: ${{ secrets.REGISTRY_USERNAME }}/as6-2_osso_user_service:latest
+          tags: "${{ secrets.REGISTRY_USERNAME }}/as6-2_osso_user_service:${{ github.ref_name }}"
