--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -39,4 +39,6 @@ jobs:
     - name: Run tests
       env:
         ConnectionStrings__DefaultConnection: "Host=localhost;Port=5432;Database=${{ secrets.DB_NAME }};Username=${{ secrets.DB_USER }};Password=${{ secrets.DB_PASSWORD }}"
+        Auth__Domain: "${{ secrets.AUTH0_DOMAIN }}"
+        Auth__Audience: "${{ secrets.AUTH0_AUDIENCE }}"
       run: dotnet test ./UserIntegrationTests/UserIntegrationTests.csproj
