fixed workflow name in load test job

--- a/.github/workflows/performance-tests.yml
+++ b/.github/workflows/performance-tests.yml
@@ -2,7 +2,7 @@ name: Performance Tests
 
 on:
   workflow_run:
-    workflows: [ "Build and Push Docker Image" ]
+    workflows: [ "Dockerize" ]
     types:
       - completed
   push:
