--- a/.github/workflows/performance-tests.yml
+++ b/.github/workflows/performance-tests.yml
@@ -5,7 +5,6 @@ on:
     workflows: [ "Dockerize" ]
     types:
       - completed
-  push:
     branches:
       - main
       - develop
@@ -51,7 +50,7 @@ jobs:
         id: get-token
         run: |
           TOKEN=$(curl --request POST \
-            --url ${{ secrets.AUTH0_DOMAIN }}/oauth/token \
+            --url ${{ secrets.AUTH0_DOMAIN }}oauth/token \
             --header 'Content-Type: application/json' \
             --data '{
               "client_id": ${{ secrets.AUTH0_CLIENT_ID }},
