--- a/.github/workflows/performance-tests.yml
+++ b/.github/workflows/performance-tests.yml
@@ -59,6 +59,10 @@ jobs:
       - name: Setup K6
         uses: grafana/setup-k6-action@v1
 
+      - name: Check Access Token
+        run: |
+          echo "Access Token: ${{ steps.get-token.outputs.access-token }}"
+             
       - name: Run k6 tests
         env:
           TOKEN: ${{ steps.get-token.outputs.access-token }}
