--- a/.github/workflows/performance-tests.yml
+++ b/.github/workflows/performance-tests.yml
@@ -17,7 +17,7 @@ jobs:
       postgres:
         image: postgres:17
         env:
-          POSTGRES_HOST: postgres
+          POSTGRES_HOST: host.docker.internal
           POSTGRES_PASSWORD: ${{ secrets.DB_PASSWORD }}
           POSTGRES_USER: ${{ secrets.DB_USER }}
           POSTGRES_DB: ${{ secrets.DB_NAME }}
@@ -37,7 +37,7 @@ jobs:
         uses: namoshek/rabbitmq-github-action@v1
         with:
           ports: '5672:5672 15672:15672'
-          container-name: 'rabbitmq'
+          container-name: 'host.docker.internal'
 
       - name: Start Application Service
         run: |
@@ -48,7 +48,7 @@ jobs:
             -e "Auth__Domain=${{ secrets.AUTH0_DOMAIN }}" \
             -e "Auth__Audience=${{ secrets.AUTH0_AUDIENCE }}" \
             -e "Test__Email=${{ secrets.TEST_EMAIL }}" \
-            -e "RabbitMQ=rabbitmq" \
+            -e "RabbitMQ=host.docker.internal" \
             ${{ secrets.REGISTRY_USERNAME }}/as6-2_osso_user_service:${{ github.ref_name }}
 
       - name: Install dependencies
