--- a/.github/workflows/performance-tests.yml
+++ b/.github/workflows/performance-tests.yml
@@ -49,7 +49,13 @@ jobs:
           Auth__Audience: "${{ secrets.AUTH0_AUDIENCE }}"
           Test__Email: "${{ secrets.TEST_EMAIL }}"
         run: | 
-          dotnet run --project ./UserService &
+          dotnet run --project ./UserService > service.log 2>&1 &
+          echo "Waiting for the application to start..."
+          until grep -q "Now listening on: http://localhost:5157" service.log; do
+            echo "Application not started yet, retrying in 5 seconds..."
+            sleep 5
+          done
+          echo "Application started successfully."
 
       - name: Install dependencies
         run: yarn
