--- a/.github/workflows/performance-tests.yml
+++ b/.github/workflows/performance-tests.yml
@@ -76,8 +76,8 @@ jobs:
       - name: Run k6 tests
         uses: grafana/run-k6-action@v1
         env:
-#          K6_CLOUD_TOKEN: ${{ secrets.K6_CLOUD_TOKEN }}
-#          K6_CLOUD_PROJECT_ID: ${{ secrets.K6_CLOUD_PROJECT_ID }}
+          K6_CLOUD_TOKEN: ${{ secrets.K6_CLOUD_TOKEN }}
+          K6_CLOUD_PROJECT_ID: ${{ secrets.K6_CLOUD_PROJECT_ID }}
           TOKEN: ${{ steps.get-token.outputs.access-token }}
           BRANCH: ${{ github.ref_name }}
           TEST_EMAIL: ${{ secrets.TEST_EMAIL }}
