--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,34 +3,38 @@ name: Deploy to AKS with Kubeconfig
 on:
   push:
     branches:
-      - main
+      - main  # Adjust to your deployment branch
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
+    # Step 1: Check out the repository code
+    - name: Checkout Code
       uses: actions/checkout@v4
 
-    - name: Log in to Azure CLI
+    # Step 2: Set up kubeconfig for AKS
+    - name: Set up Kubeconfig
       run: |
-        echo "${{ secrets.AZURE_USERNAME }}"
-        az login --username "${{ secrets.AZURE_USERNAME }}" --password "${{ secrets.AZURE_PASSWORD }}"
-        az acr login --name ${{ secrets.AZURE_CONTAINER_REGISTRY }}
+        echo "${{ secrets.KUBECONFIG }}" > kubeconfig
+        export KUBECONFIG=kubeconfig
 
-    - name: Build and push Docker image
+    # Step 3: Log in to ACR
+    - name: Log in to ACR
+      run: |
+        echo "${{ secrets.ACR_PASSWORD }}" | docker login ${{ secrets.AZURE_CONTAINER_REGISTRY }}.azurecr.io --username ${{ secrets.ACR_USERNAME }} --password-stdin
+
+    # Step 4: Build and push Docker image to ACR
+    - name: Build and Push Docker Image
       run: |
         IMAGE_TAG=${{ secrets.AZURE_CONTAINER_REGISTRY }}.azurecr.io/as6-2_osso_user_service:${{ github.sha }}
         docker build -t $IMAGE_TAG .
         docker push $IMAGE_TAG
 
-    - name: Set kubeconfig for AKS
-      run: |
-        echo "${{ secrets.KUBECONFIG }}" > kubeconfig
-        export KUBECONFIG=kubeconfig
-
+    # Step 5: Deploy to AKS
     - name: Deploy to AKS
       run: |
-        kubectl set image deployment/myapp myapp-container=${{ secrets.AZURE_CONTAINER_REGISTRY }}.azurecr.io/myapp:${{ github.sha }}
-        kubectl rollout status deployment/myapp
+        kubectl apply -f k8s/deployment.yaml  # Path to your deployment manifest
+        kubectl set image deployment/as6-2_osso_user_service as6-2_osso_user_service-container=${{ secrets.AZURE_CONTAINER_REGISTRY }}.azurecr.io/as6-2_osso_user_service:${{ github.sha }}
+        kubectl rollout status deployment/as6-2_osso_user_service
