--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,11 @@ jobs:
         echo "${{ secrets.KUBECONFIG }}" > kubeconfig
         export KUBECONFIG=kubeconfig
 
+    - name: Verify kubectl connection to AKS
+      run: |
+        kubectl config view
+        kubectl get nodes
+
     # Step 3: Log in to ACR
     - name: Log in to ACR
       run: |
