--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,10 +15,12 @@ jobs:
       uses: actions/checkout@v4
 
     # Step 2: Set up kubeconfig for AKS
-    - name: Set up Kubeconfig
+    - name: Set up KUBECONFIG
+      env:
+        KUBECONFIG: ${{ secrets.KUBECONFIG }}
       run: |
-        echo "${{ secrets.KUBECONFIG }}" > kubeconfig
-        export KUBECONFIG=kubeconfig
+        echo "$KUBECONFIG" > kubeconfig.yaml
+        export KUBECONFIG=$(pwd)/kubeconfig.yaml
 
     - name: Verify kubectl connection to AKS
       run: |
