--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,12 +15,13 @@ jobs:
       uses: actions/checkout@v4
 
     # Step 2: Set up kubeconfig for AKS
-    - name: Set up KUBECONFIG
+    - name: Write Kubeconfig to File
       env:
         KUBECONFIG: ${{ secrets.KUBECONFIG }}
       run: |
-        echo "$KUBECONFIG" > kubeconfig.yaml
+        echo "$KUBECONFIG" | base64 --decode > kubeconfig.yaml
         export KUBECONFIG=$(pwd)/kubeconfig.yaml
+        echo "KUBECONFIG set to $(pwd)/kubeconfig.yaml"
 
     - name: Verify kubectl connection to AKS
       run: |
