--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,10 +33,9 @@ jobs:
 
     - name: Prepare Deployment File
       run: |
-        IMAGE_TAG=${{ secrets.AZURE_CONTAINER_REGISTRY }}.azurecr.io/as6-2_osso_user_service:${{ github.sha }}
-        sed -i "s@\\${{ secrets.AZURE_CONTAINER_REGISTRY }}@${{ secrets.AZURE_CONTAINER_REGISTRY }}@g" deployment.yaml
-        sed -i "s@\\${{ github.sha }}@${{ github.sha }}@g" deployment.yaml
-
+        sed -i "s|PLACEHOLDER_AZURE_CONTAINER_REGISTRY|${{ secrets.AZURE_CONTAINER_REGISTRY }}|g" deployment.yaml
+        sed -i "s|PLACEHOLDER_GITHUB_SHA|${{ github.sha }}|g" deployment.yaml
+    
     - name: Deploy to AKS
       run: |
         kubectl --kubeconfig=$(pwd)/kubeconfig.yaml apply -f deployment.yaml --validate=false
