--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,10 @@ jobs:
     - name: Prepare Deployment File
       run: |
         sed -i "s|PLACEHOLDER_AZURE_CONTAINER_REGISTRY|${{ secrets.AZURE_CONTAINER_REGISTRY }}|g" deployment.yaml
-        sed -i "s|PLACEHOLDER_GITHUB_SHA|${{ github.sha }}|g" deployment.yaml
+        # sed -i "s|PLACEHOLDER_GITHUB_SHA|${{ github.sha }}|g" deployment.yaml
+        IMAGE_TAG=${{ secrets.ACR_NAME }}.azurecr.io/as6-2_osso_user_service:main
+        docker build -t $IMAGE_TAG .
+        docker push $IMAGE_TAG
     
     - name: Deploy to AKS
       run: |
